# webcrawler-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
examples/: Cargo.toml
examples/src/fake_crawler/: main.rs
src/: crawler.rs  lib.rs  shutdown.rs  spider.rs
src/crawler/: state.rs  statistics.rs
