[package]
name = "webcrawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
async-trait = "0.1.82"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "signal", "sync"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["rt"] }
tracing = "0.1.40"
# anyhow = { workspace = true }
# async-trait = { workspace = true }
# chrono = { workspace = true, features = ["serde"] }
# futures = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
# tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
# tokio-stream = { workspace = true }
# tracing = { workspace = true }
