[package]
authors = [
    "Språkbanken Text <sb-info@svenska.gu.se>",
    "Kristoffer Andersson <kristoffer.andersson@gu.se>",
]
description = "A library for crawling the web."
name = "webcrawler"
version = "0.1.2"
edition = "2021"
license = "MIT"
include = ["src/**/*.rs", "LICENSE", "*.md", "example/**/*", "Cargo.toml"]
repository = "https://github.com/spraakbanken/webcrawler-rs"
homepage = "https://spraakbanken.gu.se"
rust-version = "1.70.0" # MSRV

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
async-trait = "0.1.82"
chrono = { version = "0.4.37", features = ["serde"] }
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.31", features = ["macros", "rt", "signal", "sync"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.11", features = ["rt"] }
tracing = "0.1.40"

[workspace]
members = ["examples"]
